--- a/notebooks/confusion_matrix_concept.ipynb
+++ b/notebooks/confusion_matrix_concept.ipynb
@@ -10,7 +10,9 @@
     "- Learning Date: 19-Oct-23\n",
     "- Learning from: Prasert Kanawattanachai (CBS)\n",
     "    - Youtube: https://www.youtube.com/prasertcbs\n",
-    "    - Github: https://github.com/prasertcbs/"
+    "    - Github: https://github.com/prasertcbs/\n",
+    "\n",
+    "- Wikipedia: Logistic regression - study hours versus passing exam (URL: https://en.wikipedia.org/wiki/Logistic_regression)"
    ]
   },
   {
