--- a/notebooks/confusion_matrix_concept.ipynb
+++ b/notebooks/confusion_matrix_concept.ipynb
@@ -139,8 +139,126 @@
    "source": [
     "# load csv data to a dataframe\n",
     "\n",
-    "df = pd.read_csv('https://github.com/prasertcbs/basic-dataset/raw/master/study_hours.csv')\n",
+    "df = pd.read_csv('https://github.com/prasertcbs/basic-dataset/raw/master/study_hours.csv') # data to work on binary classification\n",
     "df.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "      <th>19</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Hours</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.75</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pass</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0     1    2     3    4     5     6    7     8    9     10   11    12  \\\n",
+       "Hours  0.5  0.75  1.0  1.25  1.5  1.75  1.75  2.0  2.25  2.5  2.75  3.0  3.25   \n",
+       "Pass   0.0  0.00  0.0  0.00  0.0  0.00  1.00  0.0  1.00  0.0  1.00  0.0  1.00   \n",
+       "\n",
+       "        13   14    15   16    17   18   19  \n",
+       "Hours  3.5  4.0  4.25  4.5  4.75  5.0  5.5  \n",
+       "Pass   0.0  1.0  1.00  1.0  1.00  1.0  1.0  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.T"
    ]
   },
   {
@@ -874,7 +992,7 @@
    "source": [
     "### scikit-learn: confusion matrix\n",
     "\n",
-    "![Screenshot 2566-10-19 at 20.39.51.png](<attachment:Screenshot 2566-10-19 at 20.39.51.png>)"
+    "![Screenshot 2566-10-19 at 20.39.51.png](<attachment:Screenshot 2566-10-19 at 20.39.51.png>)\n"
    ]
   },
   {
@@ -1387,7 +1505,7 @@
     }
    ],
    "source": [
-    "tn, fp, fn, tp = metrics.confusion_matrix(y_train, y_pred).ravel()\n",
+    "tn, fp, fn, tp = metrics.confusion_matrix(y_train, y_pred).ravel() # save values to each tn, fp, fn, tp\n",
     "tn, fp, fn, tp "
    ]
   },
@@ -1440,7 +1558,7 @@
     }
    ],
    "source": [
-    "metrics.accuracy_score(y_train, y_pred)"
+    "metrics.accuracy_score(y_train, y_pred) # use building function"
    ]
   },
   {
@@ -1460,7 +1578,7 @@
     }
    ],
    "source": [
-    "metrics.precision_score(y_train, y_pred)"
+    "metrics.precision_score(y_train, y_pred) # use building function"
    ]
   },
   {
@@ -1480,7 +1598,7 @@
     }
    ],
    "source": [
-    "tp/(tp + fp) # precision score"
+    "tp/(tp + fp) # precision score by our calulation"
    ]
   },
   {
@@ -1565,7 +1683,7 @@
     }
    ],
    "source": [
-    "print(metrics.classification_report(y_train, y_pred))"
+    "print(metrics.classification_report(y_train, y_pred)) # get them all by suing classification_report build-in function - we nomally interested class = 1"
    ]
   },
   {
@@ -1585,7 +1703,7 @@
     }
    ],
    "source": [
-    "tn/(tn + fn) # precision (class = 0)"
+    "tn/(tn + fn) # precision (class = 0) - here we get class = 0 result"
    ]
   },
   {
